[gd_scene load_steps=18 format=4 uid="uid://c7c7stak47tuc"]

[ext_resource type="PackedScene" uid="uid://3en8k3fm06er" path="res://src/player.tscn" id="1_2ss4m"]
[ext_resource type="Script" path="res://src/game.gd" id="1_w3pgj"]
[ext_resource type="Texture2D" uid="uid://b2xqa5bfukute" path="res://images/BG.png" id="2_fpb18"]
[ext_resource type="Texture2D" uid="uid://c7h3h8d8fjyio" path="res://images/Walls.png" id="2_vo3kp"]
[ext_resource type="Texture2D" uid="uid://b81wmrbb4n2s1" path="res://images/tile.png" id="2_ywx3p"]
[ext_resource type="Texture2D" uid="uid://bctyvy8bomwh1" path="res://images/Crosshair.png" id="4_63kxp"]
[ext_resource type="Shader" path="res://images/vignette.gdshader" id="5_qcleb"]
[ext_resource type="PackedScene" uid="uid://5kd47cki0t7o" path="res://src/gate.tscn" id="6_5ghpv"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c85vx"]
texture = ExtResource("2_ywx3p")
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-12, -12, 12, -12, 12, 12, -12, 12)

[sub_resource type="TileSet" id="TileSet_q1llu"]
tile_size = Vector2i(24, 24)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_c85vx")

[sub_resource type="Curve2D" id="Curve2D_1mxy3"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 300, -75, 0, 0, 0, 0, 700, -75)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_cyg72"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1220, -75, 0, 0, 0, 0, 1620, -75)
}
point_count = 2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g3th4"]
shader = ExtResource("5_qcleb")
shader_parameter/inner_radius = 0.1
shader_parameter/outer_radius = 1.0
shader_parameter/vignette_strength = 1.0
shader_parameter/dither_strength = 0.03
shader_parameter/vignette_color = null

[sub_resource type="Animation" id="Animation_kdblu"]
resource_name = "ClearedWave"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../WavesControl/Label2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../WavesControl/Label3:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../WavesControl/VBox:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bxvf7"]
resource_name = "NewWave"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../WavesControl/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1.6, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1bgye"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../WavesControl/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../WavesControl/Label2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../WavesControl/Label3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../WavesControl/VBox:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5dfqf"]
_data = {
"ClearedWave": SubResource("Animation_kdblu"),
"NewWave": SubResource("Animation_bxvf7"),
"RESET": SubResource("Animation_1bgye")
}

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_w3pgj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fpb18")

[node name="Walls" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vo3kp")

[node name="Player" parent="." instance=ExtResource("1_2ss4m")]
position = Vector2(976, 563)

[node name="Crosshair" type="Sprite2D" parent="."]
z_index = 10
texture = ExtResource("4_63kxp")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAA0AAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAABAAwAAAAAAAAAAAABAA0AAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAACAAwAAAAAAAAAAAACAA0AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAAAAAAAAAAAAABAAAAAAAAAAAAAAABEAAAAAAAAAAAAAABIAAAAAAAAAAAAAABMAAAAAAAAAAAAAABQAAAAAAAAAAAAAABUAAAAAAAAAAAAAABYAAAAAAAAAAAAAABcAAAAAAAAAAAAAABgAAAAAAAAAAAAAABkAAAAAAAAAAAAAABoAAAAAAAAAAAAAABsAAAAAAAAAAAAAABwAAAAAAAAAAAAAAB0AAAAAAAAAAAAAAB4AAAAAAAAAAAAAAB8AAAAAAAAAAAAAACAAAAAAAAAAAAAAACEAAAAAAAAAAAAAACIAAAAAAAAAAAAAACMAAAAAAAAAAAAAACQAAAAAAAAAAAAAACUAAAAAAAAAAAAAACYAAAAAAAAAAAAAACcAAAAAAAAAAAAAACgAAAAAAAAAAAAAACkAAAAAAAAAAAAAACoAAAAAAAAAAAAAACsAAAAAAAAAAAAAACwAAAAAAAAAAAABAA4AAAAAAAAAAAABAA8AAAAAAAAAAAABABAAAAAAAAAAAAABABEAAAAAAAAAAAABABIAAAAAAAAAAAABABMAAAAAAAAAAAABABQAAAAAAAAAAAABABUAAAAAAAAAAAABABYAAAAAAAAAAAABABcAAAAAAAAAAAABABgAAAAAAAAAAAABABkAAAAAAAAAAAABABoAAAAAAAAAAAABABsAAAAAAAAAAAABABwAAAAAAAAAAAABAB0AAAAAAAAAAAABAB4AAAAAAAAAAAABAB8AAAAAAAAAAAABACAAAAAAAAAAAAABACEAAAAAAAAAAAABACIAAAAAAAAAAAABACMAAAAAAAAAAAABACQAAAAAAAAAAAABACUAAAAAAAAAAAABACYAAAAAAAAAAAABACcAAAAAAAAAAAABACgAAAAAAAAAAAABACkAAAAAAAAAAAABACoAAAAAAAAAAAABACsAAAAAAAAAAAABACwAAAAAAAAAAAACAA4AAAAAAAAAAAACAA8AAAAAAAAAAAACABAAAAAAAAAAAAACABEAAAAAAAAAAAACABIAAAAAAAAAAAACABMAAAAAAAAAAAACABQAAAAAAAAAAAACABUAAAAAAAAAAAACABYAAAAAAAAAAAACABcAAAAAAAAAAAACABgAAAAAAAAAAAACABkAAAAAAAAAAAACABoAAAAAAAAAAAACABsAAAAAAAAAAAACABwAAAAAAAAAAAACAB0AAAAAAAAAAAACAB4AAAAAAAAAAAACAB8AAAAAAAAAAAACACAAAAAAAAAAAAACACEAAAAAAAAAAAACACIAAAAAAAAAAAACACMAAAAAAAAAAAACACQAAAAAAAAAAAACACUAAAAAAAAAAAACACYAAAAAAAAAAAACACcAAAAAAAAAAAACACgAAAAAAAAAAAACACkAAAAAAAAAAAACACoAAAAAAAAAAAACACsAAAAAAAAAAAACACwAAAAAAAAAAAADACsAAAAAAAAAAAADACwAAAAAAAAAAAAEACsAAAAAAAAAAAAEACwAAAAAAAAAAAAFACsAAAAAAAAAAAAFACwAAAAAAAAAAAAGACsAAAAAAAAAAAAGACwAAAAAAAAAAAAHACsAAAAAAAAAAAAHACwAAAAAAAAAAAAIACsAAAAAAAAAAAAIACwAAAAAAAAAAAAJACsAAAAAAAAAAAAJACwAAAAAAAAAAAAKACsAAAAAAAAAAAAKACwAAAAAAAAAAAALACsAAAAAAAAAAAALACwAAAAAAAAAAAAMACsAAAAAAAAAAAAMACwAAAAAAAAAAAANACsAAAAAAAAAAAANACwAAAAAAAAAAAAOACsAAAAAAAAAAAAOACwAAAAAAAAAAAAPACsAAAAAAAAAAAAPACwAAAAAAAAAAAAQACsAAAAAAAAAAAAQACwAAAAAAAAAAAARACsAAAAAAAAAAAARACwAAAAAAAAAAAASACsAAAAAAAAAAAASACwAAAAAAAAAAAATACsAAAAAAAAAAAATACwAAAAAAAAAAAAUACsAAAAAAAAAAAAUACwAAAAAAAAAAAAVACsAAAAAAAAAAAAVACwAAAAAAAAAAAAWACsAAAAAAAAAAAAWACwAAAAAAAAAAAAXACsAAAAAAAAAAAAXACwAAAAAAAAAAAAYACsAAAAAAAAAAAAYACwAAAAAAAAAAAAZACsAAAAAAAAAAAAZACwAAAAAAAAAAAAaACsAAAAAAAAAAAAaACwAAAAAAAAAAAAbACsAAAAAAAAAAAAbACwAAAAAAAAAAAAcACsAAAAAAAAAAAAcACwAAAAAAAAAAAAdACsAAAAAAAAAAAAdACwAAAAAAAAAAAAeACsAAAAAAAAAAAAeACwAAAAAAAAAAAAfACsAAAAAAAAAAAAfACwAAAAAAAAAAAAgACsAAAAAAAAAAAAgACwAAAAAAAAAAAAhACsAAAAAAAAAAAAhACwAAAAAAAAAAAAiACsAAAAAAAAAAAAiACwAAAAAAAAAAAAjACsAAAAAAAAAAAAjACwAAAAAAAAAAAAkACsAAAAAAAAAAAAkACwAAAAAAAAAAAAlACsAAAAAAAAAAAAlACwAAAAAAAAAAAAmACsAAAAAAAAAAAAmACwAAAAAAAAAAAAnACsAAAAAAAAAAAAnACwAAAAAAAAAAAAoACsAAAAAAAAAAAAoACwAAAAAAAAAAAApACsAAAAAAAAAAAApACwAAAAAAAAAAAAqACsAAAAAAAAAAAAqACwAAAAAAAAAAAArACsAAAAAAAAAAAArACwAAAAAAAAAAAAsACsAAAAAAAAAAAAsACwAAAAAAAAAAAAtACsAAAAAAAAAAAAtACwAAAAAAAAAAAAuACsAAAAAAAAAAAAuACwAAAAAAAAAAAAvACsAAAAAAAAAAAAvACwAAAAAAAAAAAAwACsAAAAAAAAAAAAwACwAAAAAAAAAAAAxACsAAAAAAAAAAAAxACwAAAAAAAAAAAAyACsAAAAAAAAAAAAyACwAAAAAAAAAAAAzACsAAAAAAAAAAAAzACwAAAAAAAAAAAA0ACsAAAAAAAAAAAA0ACwAAAAAAAAAAAA1ACsAAAAAAAAAAAA1ACwAAAAAAAAAAAA2ACsAAAAAAAAAAAA2ACwAAAAAAAAAAAA3ACsAAAAAAAAAAAA3ACwAAAAAAAAAAAA4ACsAAAAAAAAAAAA4ACwAAAAAAAAAAAA5ACsAAAAAAAAAAAA5ACwAAAAAAAAAAAA6ACsAAAAAAAAAAAA6ACwAAAAAAAAAAAA7ACsAAAAAAAAAAAA7ACwAAAAAAAAAAAA8ACsAAAAAAAAAAAA8ACwAAAAAAAAAAAA9ACsAAAAAAAAAAAA9ACwAAAAAAAAAAAA+ACsAAAAAAAAAAAA+ACwAAAAAAAAAAAA/ACsAAAAAAAAAAAA/ACwAAAAAAAAAAABAACsAAAAAAAAAAABAACwAAAAAAAAAAABBACsAAAAAAAAAAABBACwAAAAAAAAAAABCACsAAAAAAAAAAABCACwAAAAAAAAAAABDACsAAAAAAAAAAABDACwAAAAAAAAAAABEACsAAAAAAAAAAABEACwAAAAAAAAAAABFACsAAAAAAAAAAABFACwAAAAAAAAAAABGACsAAAAAAAAAAABGACwAAAAAAAAAAABHACsAAAAAAAAAAABHACwAAAAAAAAAAABIACsAAAAAAAAAAABIACwAAAAAAAAAAABJACsAAAAAAAAAAABJACwAAAAAAAAAAABKACsAAAAAAAAAAABKACwAAAAAAAAAAABLACsAAAAAAAAAAABLACwAAAAAAAAAAABMACsAAAAAAAAAAABMACwAAAAAAAAAAABNACsAAAAAAAAAAABNACwAAAAAAAAAAABOACsAAAAAAAAAAABOACwAAAAAAAAAAABPACsAAAAAAAAAAABPACwAAAAAAAAAAABNAAAAAAAAAAAAAABNAAEAAAAAAAAAAABNAAIAAAAAAAAAAABNAAMAAAAAAAAAAABNAAQAAAAAAAAAAABNAAUAAAAAAAAAAABNAAYAAAAAAAAAAABNAAcAAAAAAAAAAABNAAgAAAAAAAAAAABNAAkAAAAAAAAAAABNAAoAAAAAAAAAAABNAAsAAAAAAAAAAABNAAwAAAAAAAAAAABNAA0AAAAAAAAAAABNAA4AAAAAAAAAAABNAA8AAAAAAAAAAABNABAAAAAAAAAAAABNABEAAAAAAAAAAABNABIAAAAAAAAAAABNABMAAAAAAAAAAABNABQAAAAAAAAAAABNABUAAAAAAAAAAABNABYAAAAAAAAAAABNABcAAAAAAAAAAABNABgAAAAAAAAAAABNABkAAAAAAAAAAABNABoAAAAAAAAAAABNABsAAAAAAAAAAABNABwAAAAAAAAAAABNAB0AAAAAAAAAAABNAB4AAAAAAAAAAABNAB8AAAAAAAAAAABNACAAAAAAAAAAAABNACEAAAAAAAAAAABNACIAAAAAAAAAAABNACMAAAAAAAAAAABNACQAAAAAAAAAAABNACUAAAAAAAAAAABNACYAAAAAAAAAAABNACcAAAAAAAAAAABNACgAAAAAAAAAAABNACkAAAAAAAAAAABNACoAAAAAAAAAAABOAAAAAAAAAAAAAABOAAEAAAAAAAAAAABOAAIAAAAAAAAAAABOAAMAAAAAAAAAAABOAAQAAAAAAAAAAABOAAUAAAAAAAAAAABOAAYAAAAAAAAAAABOAAcAAAAAAAAAAABOAAgAAAAAAAAAAABOAAkAAAAAAAAAAABOAAoAAAAAAAAAAABOAAsAAAAAAAAAAABOAAwAAAAAAAAAAABOAA0AAAAAAAAAAABOAA4AAAAAAAAAAABOAA8AAAAAAAAAAABOABAAAAAAAAAAAABOABEAAAAAAAAAAABOABIAAAAAAAAAAABOABMAAAAAAAAAAABOABQAAAAAAAAAAABOABUAAAAAAAAAAABOABYAAAAAAAAAAABOABcAAAAAAAAAAABOABgAAAAAAAAAAABOABkAAAAAAAAAAABOABoAAAAAAAAAAABOABsAAAAAAAAAAABOABwAAAAAAAAAAABOAB0AAAAAAAAAAABOAB4AAAAAAAAAAABOAB8AAAAAAAAAAABOACAAAAAAAAAAAABOACEAAAAAAAAAAABOACIAAAAAAAAAAABOACMAAAAAAAAAAABOACQAAAAAAAAAAABOACUAAAAAAAAAAABOACYAAAAAAAAAAABOACcAAAAAAAAAAABOACgAAAAAAAAAAABOACkAAAAAAAAAAABOACoAAAAAAAAAAABPAAAAAAAAAAAAAABPAAEAAAAAAAAAAABPAAIAAAAAAAAAAABPAAMAAAAAAAAAAABPAAQAAAAAAAAAAABPAAUAAAAAAAAAAABPAAYAAAAAAAAAAABPAAcAAAAAAAAAAABPAAgAAAAAAAAAAABPAAkAAAAAAAAAAABPAAoAAAAAAAAAAABPAAsAAAAAAAAAAABPAAwAAAAAAAAAAABPAA0AAAAAAAAAAABPAA4AAAAAAAAAAABPAA8AAAAAAAAAAABPABAAAAAAAAAAAABPABEAAAAAAAAAAABPABIAAAAAAAAAAABPABMAAAAAAAAAAABPABQAAAAAAAAAAABPABUAAAAAAAAAAABPABYAAAAAAAAAAABPABcAAAAAAAAAAABPABgAAAAAAAAAAABPABkAAAAAAAAAAABPABoAAAAAAAAAAABPABsAAAAAAAAAAABPABwAAAAAAAAAAABPAB0AAAAAAAAAAABPAB4AAAAAAAAAAABPAB8AAAAAAAAAAABPACAAAAAAAAAAAABPACEAAAAAAAAAAABPACIAAAAAAAAAAABPACMAAAAAAAAAAABPACQAAAAAAAAAAABPACUAAAAAAAAAAABPACYAAAAAAAAAAABPACcAAAAAAAAAAABPACgAAAAAAAAAAABPACkAAAAAAAAAAABPACoAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAARAAAAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAASAAAAAAAAAAAAAAASAAEAAAAAAAAAAAASAAIAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAATAAAAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAAUAAAAAAAAAAAAAAAUAAEAAAAAAAAAAAAUAAIAAAAAAAAAAAAUAAMAAAAAAAAAAAAUAAQAAAAAAAAAAAAVAAAAAAAAAAAAAAAVAAEAAAAAAAAAAAAVAAIAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAWAAAAAAAAAAAAAAAWAAEAAAAAAAAAAAAWAAIAAAAAAAAAAAAWAAMAAAAAAAAAAAAWAAQAAAAAAAAAAAAXAAAAAAAAAAAAAAAXAAEAAAAAAAAAAAAXAAIAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAAAAAAAAAAYAAAAAAAAAAAAAAAYAAEAAAAAAAAAAAAYAAIAAAAAAAAAAAAYAAMAAAAAAAAAAAAYAAQAAAAAAAAAAAAZAAAAAAAAAAAAAAAZAAEAAAAAAAAAAAAZAAIAAAAAAAAAAAAZAAMAAAAAAAAAAAAZAAQAAAAAAAAAAAAaAAAAAAAAAAAAAAAaAAEAAAAAAAAAAAAaAAIAAAAAAAAAAAAaAAMAAAAAAAAAAAAaAAQAAAAAAAAAAAAbAAAAAAAAAAAAAAAbAAEAAAAAAAAAAAAbAAIAAAAAAAAAAAAbAAMAAAAAAAAAAAAbAAQAAAAAAAAAAAAcAAAAAAAAAAAAAAAcAAEAAAAAAAAAAAAcAAIAAAAAAAAAAAAcAAMAAAAAAAAAAAAcAAQAAAAAAAAAAAAdAAAAAAAAAAAAAAAdAAEAAAAAAAAAAAAdAAIAAAAAAAAAAAAdAAMAAAAAAAAAAAAdAAQAAAAAAAAAAAAeAAAAAAAAAAAAAAAeAAEAAAAAAAAAAAAeAAIAAAAAAAAAAAAeAAMAAAAAAAAAAAAeAAQAAAAAAAAAAAAfAAAAAAAAAAAAAAAfAAEAAAAAAAAAAAAfAAIAAAAAAAAAAAAfAAMAAAAAAAAAAAAfAAQAAAAAAAAAAAAgAAAAAAAAAAAAAAAgAAEAAAAAAAAAAAAgAAIAAAAAAAAAAAAgAAMAAAAAAAAAAAAgAAQAAAAAAAAAAAAhAAAAAAAAAAAAAAAhAAEAAAAAAAAAAAAhAAIAAAAAAAAAAAAhAAMAAAAAAAAAAAAhAAQAAAAAAAAAAAAiAAAAAAAAAAAAAAAiAAEAAAAAAAAAAAAiAAIAAAAAAAAAAAAiAAMAAAAAAAAAAAAiAAQAAAAAAAAAAAAjAAAAAAAAAAAAAAAjAAEAAAAAAAAAAAAjAAIAAAAAAAAAAAAjAAMAAAAAAAAAAAAjAAQAAAAAAAAAAAAkAAAAAAAAAAAAAAAkAAEAAAAAAAAAAAAkAAIAAAAAAAAAAAAkAAMAAAAAAAAAAAAkAAQAAAAAAAAAAAAlAAAAAAAAAAAAAAAlAAEAAAAAAAAAAAAlAAIAAAAAAAAAAAAlAAMAAAAAAAAAAAAlAAQAAAAAAAAAAAAmAAAAAAAAAAAAAAAmAAEAAAAAAAAAAAAmAAIAAAAAAAAAAAAmAAMAAAAAAAAAAAAmAAQAAAAAAAAAAAAnAAAAAAAAAAAAAAAnAAEAAAAAAAAAAAAnAAIAAAAAAAAAAAAnAAMAAAAAAAAAAAAnAAQAAAAAAAAAAAAoAAAAAAAAAAAAAAAoAAEAAAAAAAAAAAAoAAIAAAAAAAAAAAAoAAMAAAAAAAAAAAAoAAQAAAAAAAAAAAApAAAAAAAAAAAAAAApAAEAAAAAAAAAAAApAAIAAAAAAAAAAAApAAMAAAAAAAAAAAApAAQAAAAAAAAAAAAqAAAAAAAAAAAAAAAqAAEAAAAAAAAAAAAqAAIAAAAAAAAAAAAqAAMAAAAAAAAAAAAqAAQAAAAAAAAAAAArAAAAAAAAAAAAAAArAAEAAAAAAAAAAAArAAIAAAAAAAAAAAArAAMAAAAAAAAAAAArAAQAAAAAAAAAAAAsAAAAAAAAAAAAAAAsAAEAAAAAAAAAAAAsAAIAAAAAAAAAAAAsAAMAAAAAAAAAAAAsAAQAAAAAAAAAAAAtAAAAAAAAAAAAAAAtAAEAAAAAAAAAAAAtAAIAAAAAAAAAAAAtAAMAAAAAAAAAAAAtAAQAAAAAAAAAAAAuAAAAAAAAAAAAAAAuAAEAAAAAAAAAAAAuAAIAAAAAAAAAAAAuAAMAAAAAAAAAAAAuAAQAAAAAAAAAAAAvAAAAAAAAAAAAAAAvAAEAAAAAAAAAAAAvAAIAAAAAAAAAAAAvAAMAAAAAAAAAAAAvAAQAAAAAAAAAAAAwAAAAAAAAAAAAAAAwAAEAAAAAAAAAAAAwAAIAAAAAAAAAAAAwAAMAAAAAAAAAAAAwAAQAAAAAAAAAAAAxAAAAAAAAAAAAAAAxAAEAAAAAAAAAAAAxAAIAAAAAAAAAAAAxAAMAAAAAAAAAAAAxAAQAAAAAAAAAAAAyAAAAAAAAAAAAAAAyAAEAAAAAAAAAAAAyAAIAAAAAAAAAAAAyAAMAAAAAAAAAAAAyAAQAAAAAAAAAAAAzAAAAAAAAAAAAAAAzAAEAAAAAAAAAAAAzAAIAAAAAAAAAAAAzAAMAAAAAAAAAAAAzAAQAAAAAAAAAAAA0AAAAAAAAAAAAAAA0AAEAAAAAAAAAAAA0AAIAAAAAAAAAAAA0AAMAAAAAAAAAAAA0AAQAAAAAAAAAAAA1AAAAAAAAAAAAAAA1AAEAAAAAAAAAAAA1AAIAAAAAAAAAAAA1AAMAAAAAAAAAAAA1AAQAAAAAAAAAAAA2AAAAAAAAAAAAAAA2AAEAAAAAAAAAAAA2AAIAAAAAAAAAAAA2AAMAAAAAAAAAAAA2AAQAAAAAAAAAAAA3AAAAAAAAAAAAAAA3AAEAAAAAAAAAAAA3AAIAAAAAAAAAAAA3AAMAAAAAAAAAAAA3AAQAAAAAAAAAAAA4AAAAAAAAAAAAAAA4AAEAAAAAAAAAAAA4AAIAAAAAAAAAAAA4AAMAAAAAAAAAAAA4AAQAAAAAAAAAAAA5AAAAAAAAAAAAAAA5AAEAAAAAAAAAAAA5AAIAAAAAAAAAAAA5AAMAAAAAAAAAAAA5AAQAAAAAAAAAAAA6AAAAAAAAAAAAAAA6AAEAAAAAAAAAAAA6AAIAAAAAAAAAAAA6AAMAAAAAAAAAAAA6AAQAAAAAAAAAAAA7AAAAAAAAAAAAAAA7AAEAAAAAAAAAAAA7AAIAAAAAAAAAAAA7AAMAAAAAAAAAAAA7AAQAAAAAAAAAAAA8AAAAAAAAAAAAAAA8AAEAAAAAAAAAAAA8AAIAAAAAAAAAAAA8AAMAAAAAAAAAAAA8AAQAAAAAAAAAAAA9AAAAAAAAAAAAAAA9AAEAAAAAAAAAAAA9AAIAAAAAAAAAAAA9AAMAAAAAAAAAAAA9AAQAAAAAAAAAAAA+AAAAAAAAAAAAAAA+AAEAAAAAAAAAAAA+AAIAAAAAAAAAAAA+AAMAAAAAAAAAAAA+AAQAAAAAAAAAAAA/AAAAAAAAAAAAAAA/AAEAAAAAAAAAAAA/AAIAAAAAAAAAAAA/AAMAAAAAAAAAAAA/AAQAAAAAAAAAAABAAAAAAAAAAAAAAABAAAEAAAAAAAAAAABAAAIAAAAAAAAAAABAAAMAAAAAAAAAAABAAAQAAAAAAAAAAABBAAAAAAAAAAAAAABBAAEAAAAAAAAAAABBAAIAAAAAAAAAAABBAAMAAAAAAAAAAABBAAQAAAAAAAAAAABCAAAAAAAAAAAAAABCAAEAAAAAAAAAAABCAAIAAAAAAAAAAABCAAMAAAAAAAAAAABCAAQAAAAAAAAAAABDAAAAAAAAAAAAAABDAAEAAAAAAAAAAABDAAIAAAAAAAAAAABDAAMAAAAAAAAAAABDAAQAAAAAAAAAAABEAAAAAAAAAAAAAABEAAEAAAAAAAAAAABEAAIAAAAAAAAAAABEAAMAAAAAAAAAAABEAAQAAAAAAAAAAABFAAAAAAAAAAAAAABFAAEAAAAAAAAAAABFAAIAAAAAAAAAAABFAAMAAAAAAAAAAABFAAQAAAAAAAAAAABGAAAAAAAAAAAAAABGAAEAAAAAAAAAAABGAAIAAAAAAAAAAABGAAMAAAAAAAAAAABGAAQAAAAAAAAAAABHAAAAAAAAAAAAAABHAAEAAAAAAAAAAABHAAIAAAAAAAAAAABHAAMAAAAAAAAAAABHAAQAAAAAAAAAAABIAAAAAAAAAAAAAABIAAEAAAAAAAAAAABIAAIAAAAAAAAAAABIAAMAAAAAAAAAAABIAAQAAAAAAAAAAABJAAAAAAAAAAAAAABJAAEAAAAAAAAAAABJAAIAAAAAAAAAAABJAAMAAAAAAAAAAABJAAQAAAAAAAAAAABKAAAAAAAAAAAAAABKAAEAAAAAAAAAAABKAAIAAAAAAAAAAABKAAMAAAAAAAAAAABKAAQAAAAAAAAAAABLAAAAAAAAAAAAAABLAAEAAAAAAAAAAABLAAIAAAAAAAAAAABLAAMAAAAAAAAAAABLAAQAAAAAAAAAAABMAAAAAAAAAAAAAABMAAEAAAAAAAAAAABMAAIAAAAAAAAAAABMAAMAAAAAAAAAAABMAAQAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_q1llu")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_1mxy3")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(300, -75)

[node name="Path2D2" type="Path2D" parent="."]
curve = SubResource("Curve2D_cyg72")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D2"]
position = Vector2(1220, -75)

[node name="Gate" parent="." instance=ExtResource("6_5ghpv")]
position = Vector2(500, 24)

[node name="Gate2" parent="." instance=ExtResource("6_5ghpv")]
position = Vector2(1420, 24)

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0

[node name="SpawnTimer" type="Timer" parent="."]

[node name="Vignette" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Vignette"]
material = SubResource("ShaderMaterial_g3th4")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.113725, 0.0509804, 1)

[node name="GameOver" type="CanvasLayer" parent="."]
process_mode = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -434.0
offset_top = -316.0
offset_right = 434.0
offset_bottom = 316.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Game Over" type="Label" parent="GameOver/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 160
text = "Game Over"

[node name="Kills" type="Label" parent="GameOver/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1

[node name="Shots" type="Label" parent="GameOver/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1

[node name="ShotYourself" type="Label" parent="GameOver/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1

[node name="Restart" type="Button" parent="GameOver/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Restart"

[node name="WavesControl" type="CanvasLayer" parent="."]
layer = 2

[node name="Label" type="Label" parent="WavesControl"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -323.0
offset_top = 152.0
offset_right = 323.0
offset_bottom = 371.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 160
text = "Wave 01"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="WavesControl"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -323.0
offset_top = 152.0
offset_right = 323.0
offset_bottom = 371.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 160
text = "Wave Cleared"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="WavesControl"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -347.0
offset_top = 316.0
offset_right = 347.0
offset_bottom = 426.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "Choose a upgrade"
horizontal_alignment = 1

[node name="VBox" type="VBoxContainer" parent="WavesControl"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.5
offset_top = -345.0
offset_right = 211.5
offset_bottom = 345.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Button1" type="Button" parent="WavesControl/VBox"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 80
disabled = true
text = "+50 Health"

[node name="Button2" type="Button" parent="WavesControl/VBox"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 80
disabled = true
text = "+10% Speed"

[node name="Button3" type="Button" parent="WavesControl/VBox"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 80
disabled = true
text = "+ Shoot Rate"

[node name="Button4" type="Button" parent="WavesControl/VBox"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 80
disabled = true
text = "- Dash Cooldown"

[node name="Button5" type="Button" parent="WavesControl/VBox"]
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 80
disabled = true
text = "Two Hands"

[node name="AnimationPlayer" type="AnimationPlayer" parent="WavesControl"]
root_node = NodePath("../../CanvasLayer")
libraries = {
"": SubResource("AnimationLibrary_5dfqf")
}

[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
[connection signal="button_up" from="GameOver/ColorRect/VBoxContainer/Restart" to="." method="_on_restart_button_up"]
[connection signal="button_up" from="WavesControl/VBox/Button1" to="." method="_on_upgrade_btn_click" binds= [1]]
[connection signal="button_up" from="WavesControl/VBox/Button2" to="." method="_on_upgrade_btn_click" binds= [2]]
[connection signal="button_up" from="WavesControl/VBox/Button3" to="." method="_on_upgrade_btn_click" binds= [3]]
[connection signal="button_up" from="WavesControl/VBox/Button4" to="." method="_on_upgrade_btn_click" binds= [4]]
[connection signal="button_up" from="WavesControl/VBox/Button5" to="." method="_on_upgrade_btn_click" binds= [5]]
[connection signal="animation_finished" from="WavesControl/AnimationPlayer" to="." method="_on_animation_finished"]
